<resources>

    <string name="app_name">QRCodeMarket</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="error_invalid_email">Email inválido</string>
    <string name="error_invalid_password">Senha muito curta</string>
    <string name="error_incorrect_password">Senha incorreta</string>
    <string name="error_field_required">Este campo é obrigatório</string>
    <string name="botao_cadastro">Cadastre-se</string>
    <string-array name="spinner_sexo">
        <item>Masculino</item>
        <item>Feminino</item>
    </string-array>
    <string name="small_hint_senha"><font size="15">Senha</font></string>
    <!-- isso é o tamanho da senha né? deixa aqui ou tira? acho que ja tava aqui, ai não mexi. -->
    <string name="small_hint_senha2"><font size="15">Confirme a senha</font></string>
    <string name="title_activity_menu">Menu</string>

    <!-- Strings de Cadastro -->
    <string name="infomacoes_basicas">Informações Básicas</string>
    <string name="nome_completo">Nome completo</string>
    <string name="email">E-mail (se possuir)</string>
    <string name="cpf">CPF</string>
    <string name="celular">Celular</string>
    <string name="nascimento">Nascimento</string>
    <string name="senha">Senha</string>
    <string name="confirme_a_senha">Confirme a senha</string>
    <string name="botao_continuar">Continuar</string>

    <!-- Strings de Cadastro_endereço -->
    <string name="informacoes_de_endereco">Informações de Endereço</string>
    <string name="logradouro">Logradouro</string>
    <string name="numero">Nº</string>
    <string name="bairro">Bairro</string>
    <string name="cidade">Cidade</string>
    <string name="estado">PE</string>
    <string name="uf">UF</string>
    <!-- mais na frente a gente muda pra UF, e coloca a opcão dos estados. pq vai depender do estado que o usuario reside. -->
    <string name="cep">CEP</string>
    <string name="complemento">Complemento</string>
    <string name="botao_cadastrar">Cadastrar</string>

    <!-- Strings de Cadastro_pagamento -->
    <string name="informacoes_de_pagamento">Informações de Pagamento</string>
    <string name="botao_cancelar">Cancelar</string>
    <string name="botao_pular">Pular</string>
    <string name="botao_finalizar">Finalizar</string>

    <!-- Strings de Carrinho -->
    <string name="adicionar_produto">Adicionar Produto</string>
    <string name="frete">Frete</string>
    <string name="total">Total</string>
    <string name="comprar">Comprar</string>
    <string name="valor_frete">3.99</string>

    <!-- Strings de Login -->
    <string name="sou_cadastrado">Sou cadastrado</string>
    <string name="cpf_login">CPF</string>
    <string name="senha_login">Senha</string>
    <string name="botao_entrar_login">Entrar</string>
    <string name="nao_tenho_cadastro">Não tenho cadastro</string>
    <string name="botao_criar_conta">Criar Conta</string>
    <string name="ou">OU</string>
    <string name="botao_entre_facebook">Entre com o Facebook</string>

    <!-- Strings de Menu -->
    <string name="visitante">Visitante</string>
    <string name="botao_entrar_menu">Entrar</string>
    <string name="botao_meu_carrinho">Meu carrinho</string>
    <string name="botao_minhas_compras">Minhas compras</string>
    <string name="botao_atualizar_dados">Atualizar meus dados</string>
    <string name="botao_config">Configurações</string>

    <!-- Strings de Local de entrega -->
    <string name="entregar_meu_endereco">Entregar no meu endereço</string>
    <string name="entregar_outro_endereco">Entregar em outro endereço</string>
    <string name="local_entrega">Local de entrega</string>

    <string name="confirmacao_compra">Confirmação de compra</string>
    <string name="produtos">Produtos</string>
    <string name="forma_pagamento">Forma de pagamento</string>
    <string name="pedido_recebido">Obrigado! O seu pedido foi recebido.</string>
    <string name="pedido_texto">Em alguns minutos você receberá os seus produtos. Ficamos felizes pela sua preferência e esperamos que possa voltar novamente ;)</string>
    <string name="pedido_numero">Número do pedido:  %1$s</string>
    <string name="voltar_menu">Voltar ao menu</string>
    <string name="pedido">Pedido</string>
    <string name="remover_produto_carrinho">Tem certeza que deseja remover este produto do seu carrinho?</string>
    <string name="data">Data</string>
    <string name="compras_vazia">Ops! Você ainda não realizou nenhuma compra. Que tal fazer uma agora? ;)</string>
    <string name="texto_carrinho_vazio">Ops! Seu carrinho está vazio. Adicione itens clicando no botão abaixo. É super fácil! ;)</string>
    <string name="ir_carrinho">Ir para o meu carrinho</string>
    <string name="carrinho_vazio">O carrinho está vazio!</string>
    <string name="produto_repetido">Este produto já está no seu carrinho</string>
    <string name="sub_total">Sub-total</string>

</resources>
