<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="mobi.stos.ibar.ConfirmacaoActivity">

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/textProdutos"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/produtos"
                        android:textAppearance="@android:style/TextAppearance.Medium" />

                    <TextView
                        android:id="@+id/meuCarrinho"
                        android:layout_width="fill_parent"
                        android:layout_height="45dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="10dp"
                        android:background="@color/yellow_900"
                        android:drawableLeft="@mipmap/ic_cart"
                        android:gravity="center_vertical|center_horizontal"
                        android:text="@string/botao_meu_carrinho"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textFrete"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/frete"
                        android:textAppearance="@android:style/TextAppearance.Small" />

                    <TextView
                        android:id="@+id/textTotal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_weight=".40"
                        android:text="Total: R$ 0,00"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">


                    <TextView
                        android:id="@+id/textEntrega"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/local_entrega"
                        android:textAppearance="@android:style/TextAppearance.Medium" />


                    <TextView
                        android:id="@+id/textLogradouro"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:text="@string/logradouro"
                        android:textAppearance="@android:style/TextAppearance.Small" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textNumero"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="0.20"
                            android:text="@string/numero"
                            android:textAppearance="?android:attr/textAppearanceSmall" />

                        <TextView
                            android:id="@+id/textComplemento"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="0.80"
                            android:text="@string/complemento"
                            android:textAppearance="?android:attr/textAppearanceSmall" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textBairro"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.30"
                            android:text="@string/bairro"
                            android:textAppearance="?android:attr/textAppearanceSmall" />

                        <TextView
                            android:id="@+id/textCidade"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.30"
                            android:text="@string/cidade"
                            android:textAppearance="@android:style/TextAppearance.Small" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textEstado"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="0.20"
                            android:text="@string/uf"
                            android:textAppearance="?android:attr/textAppearanceSmall" />


                        <TextView
                            android:id="@+id/textCep"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="0.80"
                            android:text="@string/cep"
                            android:textAppearance="?android:attr/textAppearanceSmall" />
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">


                    <TextView
                        android:id="@+id/textPagamento"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/forma_pagamento"
                        android:textAppearance="@android:style/TextAppearance.Medium" />


                    <Spinner
                        android:id="@+id/textTipoPagamento"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/forma_pagamento" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <Button
                android:id="@+id/botaoComprar"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/green_500"
                android:text="@string/comprar"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/botaoCancelar"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/red_500"
                android:text="@string/botao_cancelar"
                android:textColor="@android:color/white" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
